<resources>

    <string name="app_name">Stock App</string>

    <string name="loading">Loading…</string>
    <string name="network_problem_check_internet_connection">Network problem. Check Internet connection please.</string>
    <string name="try_again">Try again</string>
    <string name="refresh">Refresh</string>
    <string name="change_order">Change order</string>
    <string name="close">Close</string>
    <string name="dialogTitle">Error: %s</string>
    <string name="dialogMessage">Couldn\'t load the data</string>

    <string name="gross_profit_change_with_previous">Gross Profit change with previous quarter:</string>
    <string name="net_income_change_with_previous">Net Income change with previous quarter:</string>
    <string name="gross_profit_in_recent_quarter">Gross Profit in recent quarter per 1 dollar spent on them today (in cents):</string>
    <string name="net_income_in_recent_quarter">Net Income in recent quarter per 1 dollar spent on them today (in cents):</string>
    <string name="eps">Earnings per share:</string>
    <string name="eps_per_dollar">Earnings per share per 1 dollar spent on them today:</string>

    <string name="quarterly_report_date">Quarterly report date:</string>

    <string name="average_gross_profit_per_dollar">Average Gross Profit per dollar: %s</string>
    <string name="average_positive_gross_profit_per_dollar">Average positive Gross Profit per dollar: %s</string>

    <string name="average_net_income_per_dollar">Average Net Income per dollar: %s</string>
    <string name="average_positive_net_income_per_dollar">Average positive Net Income per dollar: %s</string>

    <string name="average_eps_per_dollar">Average EPS per dollar: %s</string>
    <string name="average_positive_eps_per_dollar">Average positive EPS per dollar: %s</string>

</resources>
